--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,7 +43,7 @@ dependencies:
   cloud_firestore: ^4.8.3
   get: ^4.6.5
   path: ^1.8.2
-  modal_progress_hud_nsn: ^0.1.0-nullsafety-0
+  flutter_spinkit: ^5.2.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
