--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,8 @@ dependencies:
   get: ^4.6.5
   path: ^1.8.2
   flutter_spinkit: ^5.2.0
+  async: ^2.11.0
+  rxdart: ^0.27.7
 dev_dependencies:
   flutter_test:
     sdk: flutter
